--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .flex_col_aic {
+    @apply flex flex-col items-center;
+  }
+}
 html,
 body {
   padding: 0;
   margin: 0;
+  background-color: rgb(219 234 254);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
